objects/Application_Timeslot_Booked__c.object
<CustomObject><fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Application_Timeslot_Booked</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Counselor_Availability__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Counselor Availability</label>
        <referenceTo>Counsellor_Availability__c</referenceTo>
        <relationshipName>Application_Time_Slot_Booked</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Counselor_Availibility_End_Time__c</fullName>
        <formula>Counselor_Availability__r.End_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Counselor Availibility End Time</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Counselor_Availibility_Start_Time__c</fullName>
        <formula>Counselor_Availability__r.Start_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Counselor Availibility Start Time</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Event_Date__c</fullName>
        <label>Event Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Interview_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box after the associated interview has been completed.</inlineHelpText>
        <label>Interview Completed</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Lead_Email__c</fullName>
        <label>Lead Email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>Lead_Name__c</fullName>
        <label>Lead Name</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Id of the Source Lead use to identify the applicant</description>
        <inlineHelpText>Id of the Source Lead use to identify the applicant</inlineHelpText>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Application_Time_Slot_Booked</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Application_Timeslot_Booked</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Program_Interviewing_For_Email_Address__c</fullName>
        <formula>Timeslot_Definition__r.Program__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Interviewing For Email Address</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Program_Interviewing_For_Phone_Number__c</fullName>
        <formula>Timeslot_Definition__r.Program__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Interviewing For Phone Number</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Program_Interviewing_For__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Interviewing For</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Interviews</relationshipLabel>
        <relationshipName>Interviews_del</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Timeslot_Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interview Definition</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Timeslot_Definition__c.OwnerId</field>
                <operation>equals</operation>
                <valueField>$Source.OwnerId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Timeslot_Definition__c</referenceTo>
        <relationshipLabel>Interviews</relationshipLabel>
        <relationshipName>Application_Timeslot_Booked</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Type_of_Appointment_From_Interview_Def__c</fullName>
        <formula>TEXT(Timeslot_Definition__r.Type_of_Appointment__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type of Appointment From Interview Def</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Type_of_Interview_From_Interview_Def__c</fullName>
        <formula>TEXT(Timeslot_Definition__r.Type_of_Interview__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type of Interview From Interview Def</label>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Interview</label><nameField>
        <displayFormat>ATB-{0000}</displayFormat>
        <label>Application Timeslot Booked Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Interviews</pluralLabel><sharingModel>Private</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Locked__c</columns>
        <columns>Contact__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Lead__c</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>